[workspace]
members = ["wasi-near-forms-ark"]
exclude = ["db-api"]
resolver = "2"

[profile.release]
opt-level = "z"        # Optimize for size (more aggressive than "s")
lto = true             # Link-time optimization
strip = true           # Strip symbols
codegen-units = 1      # Better optimization (slower compile)
panic = "abort"        # Reduce binary size
