[package]
name = "db-api"
version = "0.1.0"
edition = "2021"
description = "HTTP API for near-forms database - used by WASI module"

[[bin]]
name = "db-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
constant_time_eq = "0.3"

[profile.release]
opt-level = 3
lto = true
